Add Auth0 migration service